--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -24375,6 +24375,167 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Naga.QuestFrozenThrone.RewardDescription
   nameWithType: QuestFrozenThrone.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin
+  name: QuestIllidanKillGoblin
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html
+  commentId: T:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin
+  nameWithType: QuestIllidanKillGoblin
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.#ctor
+  name: QuestIllidanKillGoblin()
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.#ctor
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.QuestIllidanKillGoblin()
+  nameWithType: QuestIllidanKillGoblin.QuestIllidanKillGoblin()
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.#ctor*
+  name: QuestIllidanKillGoblin
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.QuestIllidanKillGoblin
+  nameWithType: QuestIllidanKillGoblin.QuestIllidanKillGoblin
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.CompletionPopup
+  nameWithType: QuestIllidanKillGoblin.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.CompletionPopup
+  nameWithType: QuestIllidanKillGoblin.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnAdd(MacroTools.FactionSystem.Faction)
+  name: OnAdd(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_OnAdd_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnAdd(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnAdd(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestIllidanKillGoblin.OnAdd(Faction)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnAdd*
+  name: OnAdd
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_OnAdd_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnAdd
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnAdd
+  nameWithType: QuestIllidanKillGoblin.OnAdd
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestIllidanKillGoblin.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.OnComplete
+  nameWithType: QuestIllidanKillGoblin.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.RewardDescription
+  nameWithType: QuestIllidanKillGoblin.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html#WarcraftLegacies_Source_Quests_Naga_QuestIllidanKillGoblin_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.RewardDescription
+  nameWithType: QuestIllidanKillGoblin.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway
+  name: QuestRegroupCastaway
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html
+  commentId: T:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway
+  nameWithType: QuestRegroupCastaway
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.#ctor
+  name: QuestRegroupCastaway()
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html#WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.#ctor
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.QuestRegroupCastaway()
+  nameWithType: QuestRegroupCastaway.QuestRegroupCastaway()
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.#ctor*
+  name: QuestRegroupCastaway
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html#WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.QuestRegroupCastaway
+  nameWithType: QuestRegroupCastaway.QuestRegroupCastaway
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html#WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup
+  nameWithType: QuestRegroupCastaway.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html#WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.CompletionPopup
+  nameWithType: QuestRegroupCastaway.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html#WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription
+  nameWithType: QuestRegroupCastaway.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html#WarcraftLegacies_Source_Quests_Naga_QuestRegroupCastaway_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.RewardDescription
+  nameWithType: QuestRegroupCastaway.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan
+  name: QuestSkullOfGuldan
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html
+  commentId: T:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan
+  nameWithType: QuestSkullOfGuldan
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.#ctor
+  name: QuestSkullOfGuldan()
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html#WarcraftLegacies_Source_Quests_Naga_QuestSkullOfGuldan__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.#ctor
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.QuestSkullOfGuldan()
+  nameWithType: QuestSkullOfGuldan.QuestSkullOfGuldan()
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.#ctor*
+  name: QuestSkullOfGuldan
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html#WarcraftLegacies_Source_Quests_Naga_QuestSkullOfGuldan__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.QuestSkullOfGuldan
+  nameWithType: QuestSkullOfGuldan.QuestSkullOfGuldan
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html#WarcraftLegacies_Source_Quests_Naga_QuestSkullOfGuldan_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.CompletionPopup
+  nameWithType: QuestSkullOfGuldan.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html#WarcraftLegacies_Source_Quests_Naga_QuestSkullOfGuldan_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.CompletionPopup
+  nameWithType: QuestSkullOfGuldan.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html#WarcraftLegacies_Source_Quests_Naga_QuestSkullOfGuldan_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.RewardDescription
+  nameWithType: QuestSkullOfGuldan.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html#WarcraftLegacies_Source_Quests_Naga_QuestSkullOfGuldan_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.RewardDescription
+  nameWithType: QuestSkullOfGuldan.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.Quelthalas
   name: WarcraftLegacies.Source.Quests.Quelthalas
   href: api-source/WarcraftLegacies.Source.Quests.Quelthalas.html
@@ -31410,6 +31571,19 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.DragonmawPort
   nameWithType: LegendDragonmaw.DragonmawPort
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Gorfax
+  name: Gorfax
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html#WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Gorfax
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Gorfax
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Gorfax
+  nameWithType: LegendDragonmaw.Gorfax
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Gorfax*
+  name: Gorfax
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html#WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Gorfax_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Gorfax
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Gorfax
+  nameWithType: LegendDragonmaw.Gorfax
 - uid: WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Nekrosh
   name: Nekrosh
   href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html#WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Nekrosh
